--- a/byte-code-api/src/main/resources/application-dev.yml
+++ b/byte-code-api/src/main/resources/application-dev.yml
@@ -1,4 +1,4 @@
-isDebug: true
+isDebug: false
 isCrypt: true
 
 dataBaseParam: 'useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=true'
