--- a/byte-code-api/src/main/resources/application.yml
+++ b/byte-code-api/src/main/resources/application.yml
@@ -12,6 +12,6 @@ server.application.name: learn
 spring.profiles.active: dev
 spring.servlet.multipart.max-file-size: 100MB
 
-mybatis-plus.mapper-locations: classpath*:mapper/*.xml,classpath*:cn/crabapples/**/dao/mybatis/xml/*.xml
+mybatis-plus.mapper-locations: classpath*:mapper/*.xml,classpath*:cn/crabapples/system/**/dao/mybatis/xml/*.xml
 logging.file.name: logs/springboot-jwt/
 
