--- a/byte-code-generator/pom.xml
+++ b/byte-code-generator/pom.xml
@@ -50,10 +50,20 @@
 <!--            <version>${commons-codec.version}</version>-->
 <!--        </dependency>-->
         <!-- fastJson -->
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba</groupId>-->
+<!--            <artifactId>fastjson</artifactId>-->
+<!--            <version>1.2.47</version>-->
+<!--        </dependency>-->
+          <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.53</version>
+        </dependency>
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.47</version>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2-extension-spring5</artifactId>
+            <version>2.0.53</version>
         </dependency>
         <!-- lombok工具 -->
         <dependency>
