refactor(websocket): 重构 WebSocket 连接
- 修改了前端连接地址，使用 /ws/v1 和 /ws/v2 两个版本
- 更新了后端处理器注册路径，使用 /ws/v2/*- 删除了未使用的 WebSocketConfigureBAK 类
- 新增了 SpringContextConfigure 类，用于获取 Spring 上下文中的 Bean
- 优化了 WebSocketServerSimple 类，移除了冗余代码
- 更新了 AopLog 类，添加了环绕通知方法
- 删除了未使用的 ApplicationConfigure 和 DictEnum 类
- 更新了前端 WebSocketExample 组件，支持两个版本的连接

--- a/byte-code-api/src/main/resources/application-custom.properties
+++ b/byte-code-api/src/main/resources/application-custom.properties
@@ -1,8 +1,8 @@
 ### Base application config ###
-crabapples.application.aesKey=crabapples
-crabapples.application.redisPrefix=crabapples
-crabapples.application.tokenCacheTime=30
-crabapples.application.salt=crabapples
+crabapples.jwt.aesKey=crabapples
+crabapples.jwt.redisPrefix=crabapples
+crabapples.jwt.tokenCacheTime=30
+crabapples.jwt.salt=crabapples
 ### mail config ###
 crabapples.mail.host=smtp.qq.com
 crabapples.mail.source=xxxxx@qq.com
