--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -2,15 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>frontend</artifactId>
-        <groupId>cn.crabapples</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>frontend-vue2</artifactId>
+    <artifactId>frontend</artifactId>
     <properties>
-        <backend>boot-jpa-jwt</backend>
+        <backend>byte-code-api</backend>
     </properties>
     <build>
         <plugins>
