refactor(byte-code-api): 重构图灵机器人API调用功能- 移除了原有的图灵机器人API相关类和配置 - 新增了 TuringApiService 类来处理图灵机器人API调用 - 更新了应用配置文件，添加了图灵机器人API的URL和appKey - 添加了单元测试类 SpringBootApplicationTest 来测试图灵机器人API调用功能

--- a/byte-code-api/pom.xml
+++ b/byte-code-api/pom.xml
@@ -19,6 +19,26 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
+           <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>cn.crabapples</groupId>
+            <artifactId>turing-api</artifactId>
+            <version>1.0.4</version>
+        </dependency>
         <dependency>
             <groupId>com.google.zxing</groupId>
             <artifactId>core</artifactId>
